# habit-tracker-git-commits

./: .env.example  .gitignore  README.md  dev.tmux.fish
backend/: README.md  data.db  pyproject.toml
backend/src/habits_api/: app.py  config.py  db.py  github.py  ingest.py  schemas.py
backend/tests/: conftest.py  test_github_files.py  test_health.py
prompts/: idea.md  idea2  technical_prompt.md
scripts/: dev.fish  dev_backend.fish  dev_web.fish
web/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/repo/[id]/: page.tsx
